# cpp-starter-kit

./: .bazelrc  .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: gen_compilation_database.py  setup_workspace.py
cmake/: cpack.cmake
cmake/tools/: CLangFormat.cmake  CppCheck.cmake
scripts/: build.cmd  build.sh  run.cmd  run.sh
source/app/: BUILD  main.cc
sources/: main.cpp  sample.h  stacktraceDump.cpp  stacktraceDump.h
sources/app/: BUILD
sources/models/group/: group.cpp  group.h
sources/models/user/: user.cpp  user.h
sources/stacktraceDump/: stacktraceDump.h
